--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
             <button class="carousel-button next" data-carousel-button="next">&#8594;</button>
             <ul data-slides>
                 <li class="slide" data-active>
-                    <img src="./images/Slide-1.webp" alt="Nature Image #1">
+                    <img src="wp-assets/slide1.webp" alt="Nature Image #1">
                 </li>
                 <li class="slide">
-                    <img src="./images/Slide-2.webp" alt="Nature Image #2">
+                    <img src="wp-assets/slide2.webp" alt="Nature Image #2">
                 </li>
                 <li class="slide">
-                    <img src="./images/Slide-3.webp" alt="Nature Image #3">
+                    <img src="wp-assets/slide3.webp" alt="Nature Image #3">
                 </li>
                 <li class="slide">
-                    <img src="./images/Slide-4.webp" alt="Nature Image #4">
+                    <img src="wp-assets/slide4.webp" alt="Nature Image #4">
                 </li>
             </ul>
         </div>
